Services/kubia-loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubia-lb
  labels:
    app: kubia
    env: dev
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia-lb
