Services/kubia-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-session-svc
  labels:
    app: front-svc
    env: dev
spec:
  selector:
    app: front-session
  ports:
    - port: 80
      name: http
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
    - name: mysql
      port: 3306
      targetPort: 3306
  sessionAffinity: ClientIP
  type: ClusterIP
