Services/kubia-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 80
      nodePort: 30000
  selector:
    app: kubia-node 
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-ingress
  labels:
    app: kubia
    env: dev
spec:
  tls:
  - hosts:
    - kubia.cloudlife.info
    secretName: tls-secret
  rules:
  - host: kubia.cloudlife.info
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
